<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="_05_Config_Drain" Id="{49f13463-3f0a-4bbd-a176-e4e9f3f8da21}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM _05_Config_Drain
VAR
v015_Grv :fValve;
v016_Grv2 :fValve;
v017_Pump :fValve;
s018_LvlHT :dutpul;
s019_TempHT :fTemp;
v020_HT :fValve;
v021_WaterHT :fValve;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*-------------------------------------------------------------------------------------------------------*)
(*-------------------------------------------------------------------------------------------------------*)

(*------------------------------------------------------------------------------------------------------*)
(*Comprobar si hay sensor de nivel del Vaciado HT *)
Mc._05_DRAIN.xLvlHT		:=Mc._05_DRAIN.s018_LvlHT.xPul;


(*Comprobar si hay PT100 del vaciado HT *)
Mc._05_DRAIN.iTempHT	:= REAL_TO_INT (Mc._05_DRAIN.s019_TempHT.rValue);



//v015_Gvr
v015_Grv(valv:=mc._05_DRAIN.v015_Grv );

//v016_Grv2
v016_Grv2 (valv:= mc._05_DRAIN.v016_Grv2);

//v017_Pump
v017_Pump(valv:=mc._05_DRAIN.v017_Pump);

//s018_LvlHT
s018_LvlHT:=mc._05_DRAIN.s018_LvlHT;
(*
//s019_TempHT 
s019_TempHT.Temp.rAna_min:=0;
s019_TempHT.Temp.rAna_max:=1500;
s019_TempHT.Temp.rUf_min:=0;
s019_TempHT.Temp.rUf_max:=150;
//s019_TempHT.Temp.
*)
//v020_HT
v020_HT(valv:=mc._05_DRAIN.v020_HT);

//v021_WaterHT
v021_WaterHT (valv:=mc._05_DRAIN.v021_WaterHT);


]]></ST>
    </Implementation>
    <LineIds Name="_05_Config_Drain">
      <LineId Id="3" Count="1" />
      <LineId Id="9" Count="2" />
      <LineId Id="14" Count="0" />
      <LineId Id="18" Count="2" />
      <LineId Id="23" Count="0" />
      <LineId Id="52" Count="3" />
      <LineId Id="27" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="68" Count="5" />
      <LineId Id="75" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>